# encoins-relay

./: .gitignore  .gitmodules  INSTALL.md  README.md  RUN.md  TOOLS.md  build-client.sh  build-deleg-client.sh  build-deleg.sh  build-ipfs.sh  build-poll.sh  build-server.sh  build-verifier.sh  build.sh  build_cloud.sh  build_ipfs.sh  cabal.project  encoins-init.sh  encoins-relay.cabal  hie.yaml  prepare_tests.sh  run-deleg.sh  run-dev.sh  run-ipfs.sh  run-poll.sh  run-verifier.sh  run.sh
App/Bot/: Main.hs
App/Server/: Main.hs
app/Bot/: Main.hs
app/Client/: Main.hs
app/Server/: Main.hs
encoins-common/: encoins-common.cabal
encoins-common/src/Encoins/Common/: Transform.hs  Version.hs
encoins-relay-apps/: encoins-relay-apps.cabal
encoins-relay-apps/app_cloud/: Main.hs
encoins-relay-apps/app_cloud_clean/: Main.hs
encoins-relay-apps/app_deleg/: Main.hs
encoins-relay-apps/app_deleg_client/: Main.hs
encoins-relay-apps/app_ipfs/: Main.hs
encoins-relay-apps/app_poll/: Main.hs
encoins-relay-apps/src/Encoins/Relay/Apps/: Internal.hs
encoins-relay-apps/src/Encoins/Relay/Apps/Cloud/: Config.hs  Server.hs  Types.hs
encoins-relay-apps/src/Encoins/Relay/Apps/Cloud/Ipfs/: Api.hs  Config.hs  Request.hs  Server.hs  Types.hs
encoins-relay-apps/src/Encoins/Relay/Apps/Cloud/PostgreSQL/: Migration.hs  Query.hs  Statement.hs
encoins-relay-apps/src/Encoins/Relay/Apps/Delegation/: Client.hs  Config.hs  Internal.hs  Main.hs  Server.hs
encoins-relay-apps/src/Encoins/Relay/Apps/Delegation/V1/: Main.hs
encoins-relay-apps/src/Encoins/Relay/Apps/Ipfs/: Client.hs  ClientApi.hs  Config.hs  Server.hs  Types.hs  Utility.hs
encoins-relay-apps/src/Encoins/Relay/Apps/Poll/: Config.hs  Main.hs
encoins-relay-apps/src/Encoins/Relay/Apps/Save/: Config.hs  Database.hs  Server.hs  Types.hs
encoins-relay-apps/src/Encoins/Relay/Apps/Save/Database/: Database.hs  Migration.hs  Query.hs
encoins-relay-apps/src/Encoins/Relay/Apps/Save/Ipfs/: Api.hs  Config.hs  Request.hs  Server.hs  Types.hs
encoins-relay-apps/test/: Main.hs
encoins-relay-apps/test/Cloud/: Spec.hs  Unit.hs
encoins-relay-apps/test/Cloud/DB/: Discarded.hs  Encoins.hs  Utility.hs
encoins-relay-client/: Setup.hs  encoins-relay-client.cabal
encoins-relay-client/app/: Main.hs
encoins-relay-client/src/Encoins/Relay/Client/: Client.hs  Main.hs  Opts.hs  Secrets.hs
encoins-relay-delegation/: encoins-relay-delegation.cabal
encoins-relay-delegation/app/: Main.hs
encoins-relay-delegation/src/Encoins/Relay/: Delegation.hs
encoins-relay-poll/: encoins-relay-poll.cabal  encoins-relay-server.cabal  pollConfig.json
encoins-relay-poll/app/: Main.hs
encoins-relay-poll/src/Encoins/Relay/: Poll.hs
encoins-relay-poll/src/Encoins/Relay/Poll/: Config.hs
encoins-relay-server/: encoins-relay-server.cabal
encoins-relay-server/app/: Main.hs
encoins-relay-server/app_full/: Main.hs
encoins-relay-server/app_lightweight/: run-dev.sh  run.sh
encoins-relay-server/app_lightweight/mainnet/: config.json
encoins-relay-server/app_lightweight/testnet-preprod/: config.json
encoins-relay-server/src/Encoins/Relay/Server/: Api.hs  Config.hs  Delegation.hs  Internal.hs  Main.hs  Opts.hs  Server.hs  Status.hs  Version.hs
encoins-relay-server/src/Encoins/Relay/Server/Endpoints/Tx/: Intenral.hs  New.hs  Server.hs
encoins-relay-test/: encoins-relay-test.cabal
encoins-relay-test/test/: Internal.hs  Main.hs
encoins-relay-test/test/Encoins/Relay/: DelegationSpec.hs
encoins-relay-test/test/Encoins/Relay/Server/: ServerSpec.hs  StatusSpec.hs  SumbitTxSpec.hs  UtxosSpec.hs
encoins-relay-test/test/Encoins/Relay/Verifier/: ServerSpec.hs
encoins-relay-test/test/configuration/: blockfrost.token.example  config.json  delegConfig.json  delegation.ip  delegationMap.json  relayConfig.json  slotConfig.json  verifierConfig.json
encoins-relay-test/test/configuration/wallets/: test-wallet.json
encoins-relay-test/test/scripts/: kupo.sh  load_wallet.sh  node.sh  prepare_tests.sh  wallet.sh
encoins-relay-verifier/: encoins-relay-server.cabal  encoins-relay-verifier.cabal
encoins-relay-verifier/app/: Main.hs
encoins-relay-verifier/src/Encoins/Relay/Verifier/: Client.hs  Server.hs
libsodium-vrf/include/: sodium.h
libsodium-vrf/include/sodium/: crypto_core_ed25519.h  crypto_vrf.h  crypto_vrf_ietfdraft03.h  crypto_vrf_ietfdraft13.h
libsodium-vrf/lib/: libsodium.la  libsodium.so.23.3.0
libsodium-vrf/lib/pkgconfig/: libsodium.pc
mainnet/apps/cardano-node/: getNetworkConfig.sh  getProtocolParameters.sh
mainnet/apps/encoins/: blockfrost.token.example  cloud_config.json  config.json  delegConfig.json  delegation.ip  distribution.json  (+10 more)
mainnet/scripts/: healthcheck.sh  kupo.sh  plutus-chain-index.sh  wallet.sh
mainnet/wallets/: wallet-example.json
result/testnet-preprod/: bulletproof_setup.json  config.json  relayConfig.json  verifierConfig.json  verifierPrvKey.json  wallet.json
result/testnet-preview/: config.json  protocol-parameters.json  relayConfig.json  txOutRef.json
schema/: encoins.sql
scripts/: checkout_last_release.sh  get_project_version.sh
src/: App.hs
src/Bot/: Main.hs  Opts.hs
src/Client/: Internal.hs  Main.hs  Opts.hs  OptsSum.hs
src/Common/: Logger.hs  Tokens.hs  Wait.hs
src/Encoins/: Main.hs  Opts.hs
src/EncoinsServer/: Client.hs  Main.hs  Opts.hs  Server.hs  Setup.hs
src/Server/: Config.hs  Internal.hs  Main.hs  Mint.hs  Opts.hs  Ping.hs  ServerTx.hs  Setup.hs  Tx.hs
src/Test/: Encoins.hs  EncoinsServer.hs  Internal.hs  OffChain.hs  OnChain.hs  Reference.hs  TestingServer.hs
src/Testing/: Main.hs  OffChain.hs  OnChain.hs
src/TestingServer/: Main.hs  OffChain.hs  OnChain.hs
src/Utils/: Logger.hs  Servant.hs  Wait.hs
test/: Main.hs
test/EncoinsServer/: ServerSpec.hs
test/Tests/: EncoinsServer.hs
testnet/: config.json  configTemplate.json  protocol-parameters.json  server-address.txt  txOutRef.json  wallet.json
testnet-preprod/: wallet.json
testnet-preprod/scripts/: kupo.sh  node.sh  wallet.sh
testnet-preprod/wallets/: load_wallet.sh  test-wallet.json
(+33 files in other folders)
