cabal-version:      3.0

name:               encoins-relay
version:            0.1.0.0

maintainer:         encoins.crypto@ud.me

-- Plutus language settings
common lang
    default-language:   Haskell2010
    ghc-options:
      -fwarn-redundant-constraints
      -Wall
      -Widentities
      -Wincomplete-uni-patterns
      -Wincomplete-record-updates
      -Wnoncanonical-monad-instances
      -Wredundant-constraints
      -Wno-unused-do-bind
      
      -- See Plutus Tx readme
      -fno-ignore-interface-pragmas
      -fno-omit-interface-pragmas
      -fno-specialise
      -fno-strictness
      -fobject-code       
      -fplugin-opt PlutusTx.Plugin:defer-errors

library
    import: lang
    exposed-modules:
      Test.Encoins
      Test.Reference
      Bot.Main
      Server.Main
    other-modules:
      Bot.Opts
      Common.Logger
      Common.Wait
      Server.Config
      Server.Endpoints.Balance 
      Server.Endpoints.Mint 
      Server.Endpoints.Ping
      Server.Internal
      Server.Opts
      Server.Setup
      Server.ServerTx
      Test.Reference.OnChain
      Test.Reference.OffChain
    default-extensions:
      PartialTypeSignatures
    build-depends:
      base                          >= 4.9 && < 5,
      base16-bytestring                      -any,
      base64                                 -any,
      aeson                                  -any,
      aeson-casing                           -any,
      bytestring                             -any,
      cardano-api                            -any,
      cardano-ledger-alonzo                  -any,
      cardano-ledger-core                    -any,
      cborg                                  -any,
      containers                             -any,
      data-default                           -any,
      deriving-aeson                         -any,
      directory                              -any,
      encoins-core                           -any,
      exceptions                             -any,
      extra                                  -any,
      file-embed                             -any,
      filepath                               -any,
      freer-extras                           -any,
      freer-simple                           -any,
      flat                                   -any,
      generic-arbitrary                      -any,
      http-types                             -any,
      lens                                   -any,
      mtl                                    -any,
      http-client                            -any,
      openapi3                               -any,
      optparse-applicative                   -any,
      playground-common                      -any,
      plutus-common                          -any,
      plutus-contract                        -any,
      plutus-chain-index                     -any,
      plutus-chain-index-core                -any,
      plutus-tx-plugin                       -any,
      plutus-tx                              -any,
      plutus-ledger                          -any,
      plutus-ledger-api                      -any,
      plutus-ledger-constraints              -any,
      plutus-script-utils                    -any,
      plutus-use-cases                       -any,
      prettyprinter                          -any,
      purescript-bridge                      -any,
      QuickCheck                             -any,
      random                                 -any,
      req                                    -any,
      serialise                              -any,
      servant                                -any,
      servant-server                         -any,
      text                                   -any,
      text-class                             -any,
      time                                   -any,
      uuid                                   -any,
      warp                                   -any,

    hs-source-dirs: src

executable encoinsRelayServer
  default-language: Haskell2010
  hs-source-dirs: app/Server
  main-is: Main.hs
  build-depends: 
    base                          >= 4.9 && < 5,
    encoins-relay                              ,

executable encoinsRelayBot
  default-language: Haskell2010
  hs-source-dirs: app/Bot
  main-is: Main.hs
  build-depends: 
    base                          >= 4.9 && < 5,
    encoins-relay                              ,