cabal-version:      3.0

name:               encoins-relay
version:            0.1.0.0

author:             Grigory Petrov
                    Vladimir Sinyakov
maintainer:         team@encoins.io

-- Plutus language settings
common lang
    default-language:   Haskell2010
    ghc-options:
      -fwarn-redundant-constraints
      -Wall
      -Widentities
      -Wincomplete-uni-patterns
      -Wincomplete-record-updates
      -Wnoncanonical-monad-instances
      -Wredundant-constraints
      -Wno-unused-do-bind
      
      -- See Plutus Tx readme
      -fno-ignore-interface-pragmas
      -fno-omit-interface-pragmas
      -fno-specialise
      -fno-strictness
      -fobject-code       
      -fplugin-opt PlutusTx.Plugin:defer-errors

library
    import: lang
    exposed-modules:
      EncoinsServer.Main
    other-modules:
      EncoinsServer.Opts
    default-extensions:
      PartialTypeSignatures
    build-depends:
      base                          >= 4.9 && < 5,
      aeson                                  -any,
      bytestring                             -any,
      cardano-server                         -any,
      cardano-server-client                  -any,
      containers                             -any,
      csl-types                              -any,
      directory                              -any,
      encoins-bulletproofs                   -any,
      encoins-core                           -any,
      exceptions                             -any,
      extra                                  -any,
      hex-text                               -any,
      mtl                                    -any,
      optparse-applicative                   -any,
      plutus-apps-extra                      -any,
      plutus-tx                              -any,
      plutus-tx-extra                        -any,
      plutus-ledger                          -any,
      plutus-ledger-api                      -any,
      random                                 -any,
      servant-server                         -any,
      text                                   -any,

    hs-source-dirs: src

-- test-suite encoins-relay-test
--   Type:                 exitcode-stdio-1.0
--   Default-Language:     Haskell2010
--   Hs-Source-Dirs:       test
--   Ghc-Options:          -rtsopts
--   Main-Is:              Main.hs
--   Other-Modules:        Tests.EncoinsServer
--   build-depends:
--     base                          >= 4.9 && < 5,
--     cardano-server                         -any,
--     encoins-bulletproofs                   -any,
--     encoins-core                           -any,
--     encoins-relay                          -any,
--     mtl                                    -any,
--     plutus-apps-extra                      -any,
--     plutus-ledger                          -any,
--     plutus-tx                              -any,

executable encoins-relay-server
  default-language: Haskell2010
  hs-source-dirs: app/Server
  main-is: Main.hs
  build-depends: 
    base                          >= 4.9 && < 5,
    encoins-relay                              ,

executable encoins-relay-client
  default-language: Haskell2010
  hs-source-dirs: app/Client
  main-is: Main.hs
  build-depends: 
    base                          >= 4.9 && < 5,
    -- cardano-server
    cardano-server-client                      ,
    directory                                  ,
    encoins-relay                              ,