cabal-version:      3.0

name:               encoins-common
version:            0.1.0.0
author:             Grigory Petrov
                    Vladimir Sinyakov
maintainer:         team@encoins.io
synopsis:           Common utilities and approches shared through relay libraries

-- Plutus language settings
common lang
    default-language:   Haskell2010
    ghc-options:
      -fwarn-redundant-constraints
      -Wall
      -Widentities
      -Wincomplete-uni-patterns
      -Wincomplete-record-updates
      -Wnoncanonical-monad-instances
      -Wredundant-constraints
      -Wno-unused-do-bind
      -Wall

      -- See Plutus Tx readme
      -fno-ignore-interface-pragmas
      -fno-omit-interface-pragmas
      -fno-specialise
      -fno-strictness
      -fobject-code
      -fplugin-opt PlutusTx.Plugin:defer-errors

library
    import: lang
    hs-source-dirs: src
    exposed-modules:
      Encoins.Common.Version
      Encoins.Common.Transform

    build-depends:
      base                          >= 4.9 && < 5,
      aeson                                  -any,
      gitrev                                 -any,
      prettyprinter                          -any,
      prettyprinter-ansi-terminal            -any,
      text                                   -any,
      time                                   -any,
