cabal-version:      3.0

name:               encoins-relay-apps
version:            0.1.0.0

author:             Grigory Petrov
                    Vladimir Sinyakov
maintainer:         team@encoins.io
build-type:         Custom

custom-setup
    setup-depends: base >= 4.9,
                   Cabal == 3.2.*,
                   directory == 1.3.*

-- Plutus language settings
common lang
    default-language:   Haskell2010
    ghc-options:
      -fwarn-redundant-constraints
      -Wall
      -Widentities
      -Wincomplete-uni-patterns
      -Wincomplete-record-updates
      -Wnoncanonical-monad-instances
      -Wredundant-constraints
      -Wno-unused-do-bind
      -Wall

      -- See Plutus Tx readme
      -fno-ignore-interface-pragmas
      -fno-omit-interface-pragmas
      -fno-specialise
      -fno-strictness
      -fobject-code
      -fplugin-opt PlutusTx.Plugin:defer-errors

library
    import: lang
    exposed-modules:
      Encoins.Relay.Apps.Delegation.Client
      Encoins.Relay.Apps.Delegation.Internal
      Encoins.Relay.Apps.Delegation.Server
      Encoins.Relay.Apps.Internal
      Encoins.Relay.Apps.Poll.Config
      Encoins.Relay.Apps.Poll.Main
    other-modules:
    build-depends:
      base                          >= 4.9 && < 5,
      aeson                                  -any,
      aeson-casing                           -any,
      async                                  -any,
      bytestring                             -any,
      cardano-api                            -any,
      cardano-ledger-babbage                 -any,
      cardano-node-emulator                  -any,
      cardano-server                         -any,
      cardano-server-client                  -any,
      containers                             -any,
      data-default                           -any,
      directory                              -any,
      encoins-core                           -any,
    --   encoins-relay-server                   -any,
      exceptions                             -any,
      extra                                  -any,
      http-client                            -any,
      lens                                   -any,
      lens-aeson                             -any,
      mtl                                    -any,
      network-uri                            -any,
      optparse-applicative                   -any,
      plutus-apps-extra                      -any,
      plutus-chain-index-core                -any,
      plutus-ledger                          -any,
      plutus-ledger-api                      -any,
      plutus-script-utils                    -any,
      plutus-tx                              -any,
      plutus-tx-constraints                  -any,
      servant-client                         -any,
      servant-server                         -any,
      terminal-progress-bar                  -any,
      text                                   -any,
      time                                   -any,
      transformers                           -any,
      warp                                   -any,
      warp-tls                               -any,
    hs-source-dirs: src

executable encoins-relay-poll
  default-language: Haskell2010
  hs-source-dirs: app_poll
  main-is: Main.hs
  build-depends:
    base                          >= 4.9 && < 5,
    encoins-relay-apps                         ,


executable encoins-relay-delegation
  default-language: Haskell2010
  hs-source-dirs: app_deleg
  main-is: Main.hs
  build-depends:
    base                          >= 4.9 && < 5,
    encoins-relay-apps                     -any,

executable encoins-relay-delegation-client
  default-language: Haskell2010
  hs-source-dirs: app_deleg_client
  main-is: Main.hs
  build-depends:
    base                          >= 4.9 && < 5,
    encoins-relay-apps                     -any,