cabal-version: 3.0
name:          encoins-relay-apps
version:       0.1.0.0
author:
  Grigory Petrov
  Vladimir Sinyakov

maintainer:    team@encoins.io
build-type:    Custom

custom-setup
  setup-depends:
    , base       >=4.9
    , Cabal      >=3.2 && <3.3
    , directory  >=1.3 && <1.4

-- Plutus language settings
common lang
  default-language: Haskell2010
  ghc-options:
    -fwarn-redundant-constraints -Wall -Widentities
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wnoncanonical-monad-instances -Wredundant-constraints
    -Wno-unused-do-bind -Wall -fno-ignore-interface-pragmas
    -fno-omit-interface-pragmas -fno-specialise -fno-strictness
    -fobject-code -fplugin-opt PlutusTx.Plugin:defer-errors

-- See Plutus Tx readme
library
  import:          lang
  hs-source-dirs:  src
  other-modules:   Paths_encoins_relay_apps
  exposed-modules:
    Encoins.Relay.Apps.Cloud.Config
    Encoins.Relay.Apps.Cloud.Ipfs.Api
    Encoins.Relay.Apps.Cloud.Ipfs.Config
    Encoins.Relay.Apps.Cloud.Ipfs.Request
    Encoins.Relay.Apps.Cloud.Ipfs.Server
    Encoins.Relay.Apps.Cloud.Ipfs.Types
    Encoins.Relay.Apps.Cloud.PostgreSQL.Migration
    Encoins.Relay.Apps.Cloud.PostgreSQL.Query
    Encoins.Relay.Apps.Cloud.PostgreSQL.Statement
    Encoins.Relay.Apps.Cloud.Server
    Encoins.Relay.Apps.Cloud.Types
    Encoins.Relay.Apps.Delegation.Client
    Encoins.Relay.Apps.Delegation.Internal
    Encoins.Relay.Apps.Delegation.Server
    Encoins.Relay.Apps.Internal
    Encoins.Relay.Apps.Poll.Config
    Encoins.Relay.Apps.Poll.Main

  build-depends:
    , aeson
    , aeson-casing
    , async
    , base                      >=4.9 && <5
    , bytestring
    , cardano-api
    , cardano-ledger-babbage
    , cardano-node-emulator
    , cardano-server
    , cardano-server-client
    , containers
    , contravariant-extras
    , data-default
    , directory
    , encoins-common-constant
    , encoins-common-log
    , encoins-common-transform
    , encoins-common-version
    , encoins-core
    , exceptions
    , extra
    , file-embed
    , filepath
    , foldl
    , gitrev
    , hasql
    , hasql-cursor-query
    , hasql-migration
    , hasql-pool
    , hasql-transaction
    , here
    , http-client
    , http-client-tls
    , katip
    , lens
    , lens-aeson
    , mtl
    , network-uri
    , optparse-applicative
    , plutus-apps-extra
    , plutus-chain-index-core
    , plutus-ledger
    , plutus-ledger-api
    , plutus-script-utils
    , plutus-tx
    , plutus-tx-constraints
    , pretty-simple
    , process
    , safe-exceptions
    , servant
    , servant-client
    , servant-server
    , stm
    , terminal-progress-bar
    , text
    , time
    , transformers
    , uuid
    , vector
    , wai
    , wai-cors
    , warp
    , warp-tls
    , witherable

executable encoins-relay-poll
  default-language: Haskell2010
  hs-source-dirs:   app_poll
  main-is:          Main.hs
  build-depends:
    , base                >=4.9 && <5
    , encoins-relay-apps

executable encoins-relay-delegation
  default-language: Haskell2010
  hs-source-dirs:   app_deleg
  main-is:          Main.hs
  build-depends:
    , base                >=4.9 && <5
    , encoins-relay-apps

executable encoins-relay-delegation-client
  default-language: Haskell2010
  hs-source-dirs:   app_deleg_client
  main-is:          Main.hs
  build-depends:
    , base                >=4.9 && <5
    , encoins-relay-apps

executable encoins-cloud
  default-language: Haskell2010
  hs-source-dirs:   app_cloud
  main-is:          Main.hs
  ghc-options:      -threaded
  build-depends:
    , base                >=4.9 && <5
    , encoins-relay-apps

executable encoins-cloud-clean
  default-language: Haskell2010
  hs-source-dirs:   app_cloud_clean
  main-is:          Main.hs
  ghc-options:      -threaded
  build-depends:
    , base                >=4.9 && <5
    , encoins-relay-apps

test-suite encoins-cloud-test
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs:   test
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  main-is:          Main.hs
  other-modules:
    Cloud.Spec
  build-depends:
    , base         >=4.9 && <5
    , encoins-relay-apps
    , hspec
    , plutus-apps-extra
    , time
    , plutus-ledger
    , vector
