cabal-version:      3.0

name:               encoins-relay-client
version:            0.1.0.0

author:             Grigory Petrov
                    Vladimir Sinyakov
maintainer:         team@encoins.io

-- Plutus language settings
common lang
    default-language:   Haskell2010
    ghc-options:
      -fwarn-redundant-constraints
      -Wall
      -Widentities
      -Wincomplete-uni-patterns
      -Wincomplete-record-updates
      -Wnoncanonical-monad-instances
      -Wredundant-constraints
      -Wno-unused-do-bind

      -- See Plutus Tx readme
      -fno-ignore-interface-pragmas
      -fno-omit-interface-pragmas
      -fno-specialise
      -fno-strictness
      -fobject-code
      -fplugin-opt PlutusTx.Plugin:defer-errors

library
    import: lang
    exposed-modules:
      Encoins.Relay.Client.Main
      Encoins.Relay.Client.Client
      Encoins.Relay.Client.Opts
      Encoins.Relay.Client.Secrets
    other-modules:
    build-depends:
      base                          >= 4.9 && < 5,
      aeson                                  -any,
      bytestring                             -any,
      cardano-server                         -any,
      cardano-server-client                  -any,
      containers                             -any,
      csl-types                              -any,
      data-default                           -any,
      directory                              -any,
      encoins-bulletproofs                   -any,
      encoins-common-constant                -any,
      encoins-common-transform               -any,
      encoins-core                           -any,
      encoins-relay-server                   -any,
      encoins-relay-verifier                 -any,
      extra                                  -any,
      hex-text                               -any,
      mtl                                    -any,
      optparse-applicative                   -any,
      plutus-apps-extra                      -any,
      plutus-tx                              -any,
      plutus-tx-extra                        -any,
      plutus-ledger                          -any,
      plutus-ledger-api                      -any,
      plutus-script-utils                    -any,
      random                                 -any,
      servant-client                         -any,
      servant-server                         -any,
      text                                   -any,
      time                                   -any,

    hs-source-dirs: src

executable encoins-relay-client
  default-language: Haskell2010
  hs-source-dirs: app
  main-is: Main.hs
  build-depends:
    base                          >= 4.9 && < 5,
    directory                              -any,
    cardano-server                         -any,
    cardano-server-client                  -any,
    encoins-relay-client                   -any,
    encoins-relay-server                   -any,
    encoins-relay-verifier                 -any,
