cabal-version:      3.0

name:               encoins-relay-poll
version:            0.1.0.0

author:             Grigory Petrov
                    Vladimir Sinyakov
maintainer:         team@encoins.io

-- Plutus language settings
common lang
    default-language:   Haskell2010
    ghc-options:
      -fwarn-redundant-constraints
      -Wall
      -Widentities
      -Wincomplete-uni-patterns
      -Wincomplete-record-updates
      -Wnoncanonical-monad-instances
      -Wredundant-constraints
      -Wno-unused-do-bind
      
      -- See Plutus Tx readme
      -fno-ignore-interface-pragmas
      -fno-omit-interface-pragmas
      -fno-specialise
      -fno-strictness
      -fobject-code       
      -fplugin-opt PlutusTx.Plugin:defer-errors

library
    import: lang
    exposed-modules:
      Encoins.Relay.Poll
    other-modules:
    build-depends:
      base                          >= 4.9 && < 5,
      bytestring                             -any,
      cardano-api                            -any,
      cardano-ledger-babbage                 -any,
      cardano-server                         -any,
      containers                             -any,
      encoins-core                           -any,
      encoins-relay-server                   -any,
      exceptions                             -any,
      extra                                  -any,
      plutus-apps-extra                      -any,
      plutus-chain-index-core                -any,
      plutus-ledger                          -any,
      plutus-ledger-api                      -any,
      transformers                           -any,

    hs-source-dirs: src

executable encoins-relay-poll
  default-language: Haskell2010
  hs-source-dirs: app
  main-is: Main.hs
  build-depends: 
    base                          >= 4.9 && < 5,
    encoins-relay-poll                         ,