cabal-version:      3.0

name:               encoins-relay-server
version:            0.1.0.0

author:             Grigory Petrov
                    Vladimir Sinyakov
maintainer:         team@encoins.io

-- Plutus language settings
common lang
    default-language:   Haskell2010
    ghc-options:
      -fwarn-redundant-constraints
      -Wall
      -Widentities
      -Wincomplete-uni-patterns
      -Wincomplete-record-updates
      -Wnoncanonical-monad-instances
      -Wredundant-constraints
      -Wno-unused-do-bind
      
      -- See Plutus Tx readme
      -fno-ignore-interface-pragmas
      -fno-omit-interface-pragmas
      -fno-specialise
      -fno-strictness
      -fobject-code       
      -fplugin-opt PlutusTx.Plugin:defer-errors

library
    import: lang
    exposed-modules:
      Encoins.Relay.Server.Main
      Encoins.Relay.Server.Opts
      Encoins.Relay.Server.Server
    other-modules:
    build-depends:
      base                          >= 4.9 && < 5,
      aeson                                  -any,
      bytestring                             -any,
      cardano-server                         -any,
      cardano-server-client                  -any,
      containers                             -any,
      csl-types                              -any,
      data-default                           -any,
      encoins-bulletproofs                   -any,
      encoins-core                           -any,
      encoins-relay-verifier                 -any,
      exceptions                             -any,
      hex-text                               -any,
      mtl                                    -any,
      optparse-applicative                   -any,
      plutus-apps-extra                      -any,
      plutus-tx                              -any,
      plutus-tx-extra                        -any,
      plutus-ledger                          -any,
      servant-client                         -any,
      text                                   -any,

    hs-source-dirs: src

executable encoins-relay-server
  default-language: Haskell2010
  hs-source-dirs: app
  main-is: Main.hs
  build-depends: 
    base                          >= 4.9 && < 5,
    encoins-relay-server                       ,