cabal-version:      3.0

name:               encoins-relay-server
version:            0.1.0.0

author:             Grigory Petrov
                    Vladimir Sinyakov
maintainer:         team@encoins.io
build-type:         Custom

custom-setup
    setup-depends: base >= 4.9,
                   Cabal == 3.2.*,
                   directory == 1.3.*

-- Plutus language settings
common lang
    default-language:   Haskell2010
    ghc-options:
      -fwarn-redundant-constraints
      -Wall
      -Widentities
      -Wincomplete-uni-patterns
      -Wincomplete-record-updates
      -Wnoncanonical-monad-instances
      -Wredundant-constraints
      -Wno-unused-do-bind

      -- See Plutus Tx readme
      -fno-ignore-interface-pragmas
      -fno-omit-interface-pragmas
      -fno-specialise
      -fno-strictness
      -fobject-code
      -fplugin-opt PlutusTx.Plugin:defer-errors

library
    import: lang
    exposed-modules:
      Encoins.Relay.Server.Api
      Encoins.Relay.Server.Config
      Encoins.Relay.Server.Delegation
      Encoins.Relay.Server.Internal
      Encoins.Relay.Server.Main
      Encoins.Relay.Server.Opts
      Encoins.Relay.Server.Server
      Encoins.Relay.Server.Status
      Encoins.Relay.Server.Version
    build-depends:
      base                          >= 4.9 && < 5,
      aeson                                  -any,
      aeson-casing                           -any,
      bytestring                             -any,
      cardano-api                            -any,
      cardano-server                         -any,
      cardano-server-client                  -any,
      containers                             -any,
      csl-types                              -any,
      data-default                           -any,
      directory                              -any,
      encoins-bulletproofs                   -any,
      encoins-core                           -any,
      encoins-relay-apps                     -any,
      encoins-relay-verifier                 -any,
      exceptions                             -any,
      extra                                  -any,
      file-embed                             -any,
      gitrev                                 -any,
      hex-text                               -any,
      lens                                   -any,
      mtl                                    -any,
      optparse-applicative                   -any,
      plutus-apps-extra                      -any,
      plutus-tx                              -any,
      plutus-tx-constraints                  -any,
      plutus-tx-extra                        -any,
      plutus-ledger                          -any,
      plutus-ledger-api                      -any,
      plutus-script-utils                    -any,
      prettyprinter                          -any,
      prettyprinter-ansi-terminal            -any,
      random                                 -any,
      servant-server                         -any,
      servant-client                         -any,
      text                                   -any,
      time                                   -any
    hs-source-dirs: src
    other-modules: Paths_encoins_relay_server
    autogen-modules: Paths_encoins_relay_server

executable encoins-relay-server
  default-language: Haskell2010
  hs-source-dirs: app
  main-is: Main.hs
  build-depends:
    base                          >= 4.9 && < 5,
    encoins-relay-server                       ,
