cabal-version:      3.0

name:               encoins-relay-test
version:            0.1.0.0

author:             Grigory Petrov
                    Vladimir Sinyakov
maintainer:         team@encoins.io

-- Plutus language settings
common lang
    default-language:   Haskell2010
    ghc-options:
      -fwarn-redundant-constraints
      -Wall
      -Widentities
      -Wincomplete-uni-patterns
      -Wincomplete-record-updates
      -Wnoncanonical-monad-instances
      -Wredundant-constraints
      -Wno-unused-do-bind
      
      -- See Plutus Tx readme
      -fno-ignore-interface-pragmas
      -fno-omit-interface-pragmas
      -fno-specialise
      -fno-strictness
      -fobject-code       
      -fplugin-opt PlutusTx.Plugin:defer-errors

test-suite encoins-relay-test
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       test
  Ghc-Options:          -rtsopts
  Main-Is:              Main.hs
  Other-Modules:
    Encoins.Relay.Server.ServerSpec
    Encoins.Relay.Verifier.ServerSpec
    Internal
  build-depends:
    base                          >= 4.9 && < 5,
    cardano-server                         -any,
    cardano-server-client                  -any,
    cardano-server-test                    -any,
    directory                              -any,
    encoins-bulletproofs                   -any,
    encoins-core                           -any,
    encoins-relay-server                   -any,
    encoins-relay-client                   -any,
    encoins-relay-verifier                 -any,
    extra                                  -any,
    hspec                                  -any,
    hspec-core                             -any,
    plutus-apps-extra                      -any,
    plutus-ledger                          -any,
    plutus-tx                              -any,
    plutus-tx-extra                        -any,
    random                                 -any,
    time                                   -any,