cabal-version:      3.0

name:               encoins-relay-verifier
version:            0.1.0.0

author:             Grigory Petrov
                    Vladimir Sinyakov
maintainer:         team@encoins.io

-- Plutus language settings
common lang
    default-language:   Haskell2010
    ghc-options:
      -fwarn-redundant-constraints
      -Wall
      -Widentities
      -Wincomplete-uni-patterns
      -Wincomplete-record-updates
      -Wnoncanonical-monad-instances
      -Wredundant-constraints
      -Wno-unused-do-bind
      
      -- See Plutus Tx readme
      -fno-ignore-interface-pragmas
      -fno-omit-interface-pragmas
      -fno-specialise
      -fno-strictness
      -fobject-code       
      -fplugin-opt PlutusTx.Plugin:defer-errors

library
    import: lang
    exposed-modules:
        Encoins.Relay.Verifier.Server
        Encoins.Relay.Verifier.Client
    other-modules:
    build-depends:
        base                          >= 4.9 && < 5,
        aeson                                  -any,
        aeson-casing                           -any,
        bytestring                             -any,
        cardano-server                         -any,
        cardano-server-client                  -any,
        encoins-bulletproofs                   -any,
        encoins-core                           -any,
        exceptions                             -any,
        file-embed                             -any,
        mtl                                    -any,
        plutus-apps-extra                      -any,
        plutus-tx                              -any,
        plutus-tx-extra                        -any,
        text                                   -any,
        servant                                -any,
        servant-server                         -any,
        servant-client                         -any,
        warp                                   -any,
    hs-source-dirs: src

executable encoins-relay-verifier
  default-language: Haskell2010
  hs-source-dirs: app
  main-is: Main.hs
  build-depends: 
    base                          >= 4.9 && < 5,
    encoins-relay-verifier                     ,